--- a/public/bootstrap/css/bootstrap.css
+++ b/public/bootstrap/css/bootstrap.css
@@ -2982,7 +2982,8 @@ select[multiple].input-lg {
   .form-horizontal .control-label {
     padding-top: 7px;
     margin-bottom: 0;
-    text-align: center;
+    margin-left: 2%;
+    text-align: left;
   }
 }
 .form-horizontal .has-feedback .form-control-feedback {
@@ -3826,7 +3827,6 @@ tbody.collapse.in {
 .input-group .form-control {
   position: relative;
   z-index: 2;
-  float: left;
   width: 100%;
   margin-bottom: 0;
 }
