--- a/public/css/AdminLTE.css
+++ b/public/css/AdminLTE.css
@@ -2,7 +2,7 @@
 /*!
  *   AdminLTE v2.3.8
  *   Author: Almsaeed Studio
- *	 Website: Almsaeed Studio <http://almsaeedstudio.com>
+ *   Website: Almsaeed Studio <http://almsaeedstudio.com>
  *   License: Open source - MIT
  *           Please visit http://opensource.org/licenses/MIT for more information
 !*/
@@ -313,6 +313,12 @@ a:focus {
   position: relative;
   padding: 15px 15px 0 15px;
 }
+
+.content-header-small {
+  position: relative;
+  padding: 65px 15px 0 15px;
+}
+
 .content-header > h1 {
   margin: 0;
   font-size: 24px;
@@ -418,7 +424,7 @@ a:focus {
   position: absolute;
   top: 0;
   left: 0;
-  padding-top: 50px;
+  padding-top: 110px;
   min-height: 100%;
   width: 230px;
   z-index: 810;
@@ -430,7 +436,7 @@ a:focus {
 @media (max-width: 767px) {
   .main-sidebar,
   .left-side {
-    padding-top: 100px;
+    padding-top: 180px;
   }
 }
 @media (max-width: 767px) {
@@ -4908,6 +4914,7 @@ table.text-center th {
   .main-header,
   .content-header {
     display: none !important;
+    margin-top: 50px;
   }
   .content-wrapper,
   .right-side,
